[package]
name = "devx-git-users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#reqwest = "0.11"
#reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
hyper-tls = "0.5.0"
